update Maven test plugin to make sure jaxb is in the path